Fix up styles and alignment

--- a/source/style.scss
+++ b/source/style.scss
@@ -178,3 +178,7 @@ footer {
     .PreProc { color: #c000c0; }
     .Type { color: #008000;  }
 }
+
+.home {
+    padding-left: 15px;
+}
